[metadata]
name = tavern-flask
description = Flask plugin for tavern
version = attr: tavern_flask.__version__
# long_description = file: README.rst
author = Michael Boulton
author_email = boulton@zoetrope.io
url = https://taverntesting.github.io/

license = MIT
license_file = LICENSE

keywords =
    testing
    pytest
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Pytest
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Utilities
    Topic :: Software Development :: Testing
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

install_requires =
    flask
    tavern
    future

[options.packages.find]
exclude =
    tests

[options.entry_points]
tavern_http =
    flask = tavern_flask.tavernhook


[bdist_wheel]
universal = 1

[aliases]
test=pytest

[tool:pyflakes]
exclude = .tox,*.egg,dist,build,docs/source
show-source = true
max-line-length = 200
ignore = N802

[tool:pytest]
testpaths=tavern_flask tests/unit
addopts =
    --doctest-modules
    -r xs -v --strict
    -p no:logging
norecursedirs =
    .git
    .tox
    example
